--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,16 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.info {
+  max-width: 200px;
 }
 
 img {
@@ -10,6 +21,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 40px;
 }
 
 /* do not edit this footer */
